Fix some layout issues

--- a/app.css
+++ b/app.css
@@ -131,6 +131,8 @@ button, input, textarea, select {
 #timer {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 @media (min-width: 101vh) {
@@ -140,20 +142,19 @@ button, input, textarea, select {
 }
 
 #timer .countdown-display, .countdown-buttons {
-    max-width: 56rem;
-    margin: 0 auto;
+    /* max-width: 56rem; */
+    /* margin: 0 auto; */
     padding: 1rem;
 }
 
 #timer .countdown-display {
     position: relative;
-    min-width: 50vw;
+    flex-grow: 2;
 }
 
 #timer .countdown-display > svg {
     display: block;
-    max-height: 50vh;
-    margin: 0 auto;
+    max-height: 75vmin;
 }
 
 #timer .countdown-circle {
